src/actions.h

void on_dm_invite_clicked(GtkWidget *widget, gpointer user_data);
void on_dm_join_invite_clicked(GtkWidget *widget, gpointer user_data);
void on_dm_permissions_clicked(GtkWidget *widget, gpointer user_data);
void on_dm_roles_clicked(GtkWidget *widget, gpointer user_data);
void on_dm_pinned_clicked(GtkWidget *widget, gpointer user_data);
void on_search_activated(GtkEntry *entry, gpointer user_data);
void on_back_clicked(GtkWidget *widget, gpointer user_data);
void on_notifications_clicked(GtkWidget *widget, gpointer user_data);
void on_messages_clicked(GtkWidget *widget, gpointer user_data);
void on_settings_clicked(GtkWidget *widget, gpointer user_data);
void on_admin_clicked(GtkWidget *widget, gpointer user_data);
void on_admin_dm_conversation_selected(GtkListBox *box, GtkListBoxRow *row, gpointer user_data);
void on_admin_upload_emoji_clicked(GtkWidget *widget, gpointer user_data);
void on_admin_create_badge_clicked(GtkWidget *widget, gpointer user_data);
void on_admin_send_notification_clicked(GtkWidget *widget, gpointer user_data);
void on_admin_clone_user_clicked(GtkWidget *widget, gpointer user_data);
void on_admin_impersonate_clicked(GtkWidget *widget, gpointer user_data);
void on_admin_restore_admin_clicked(GtkWidget *widget, gpointer user_data);
void on_admin_post_as_user_clicked(GtkWidget *widget, gpointer user_data);
void on_admin_bulk_edit_clicked(GtkWidget *widget, gpointer user_data);
void on_admin_create_community_clicked(GtkWidget *widget, gpointer user_data);
void on_mark_all_read_clicked(GtkWidget *widget, gpointer user_data);
void on_refresh_clicked(GtkWidget *widget, gpointer user_data);
void on_compose_clicked(GtkWidget *widget, gpointer window);
void on_login_clicked(GtkWidget *widget, gpointer window);
void on_scroll_edge_reached(GtkScrolledWindow *scrolled_window, GtkPositionType pos, gpointer user_data);
void on_report_profile_clicked(GtkWidget *widget, gpointer user_data);
void on_request_affiliate_clicked(GtkWidget *widget, gpointer user_data);
void on_profile_shop_clicked(GtkWidget *widget, gpointer user_data);
void on_profile_donate_clicked(GtkWidget *widget, gpointer user_data);
void on_profile_algorithm_stats_clicked(GtkWidget *widget, gpointer user_data);
void on_profile_spam_score_clicked(GtkWidget *widget, gpointer user_data);
void on_profile_analytics_clicked(GtkWidget *widget, gpointer user_data);
void on_profile_common_followers_clicked(GtkWidget *widget, gpointer user_data);
void on_profile_top_posts_clicked(GtkWidget *widget, gpointer user_data);
void on_profile_communities_clicked(GtkWidget *widget, gpointer user_data);
void on_lists_clicked(GtkWidget *widget, gpointer user_data);
void on_create_list_clicked(GtkWidget *widget, gpointer user_data);
void on_list_follow_clicked(GtkWidget *widget, gpointer user_data);
void on_list_edit_clicked(GtkWidget *widget, gpointer user_data);
void on_list_delete_clicked(GtkWidget *widget, gpointer user_data);
void on_list_add_member_clicked(GtkWidget *widget, gpointer user_data);
void on_manage_passkeys_clicked(GtkWidget *widget, gpointer user_data);
void on_push_notifications_clicked(GtkWidget *widget, gpointer user_data);
void on_moderation_history_clicked(GtkWidget *widget, gpointer user_data);
void on_blocking_causes_clicked(GtkWidget *widget, gpointer user_data);
void on_validate_accounts_clicked(GtkWidget *widget, gpointer user_data);
void on_add_account_clicked(GtkWidget *widget, gpointer user_data);
void on_switch_primary_clicked(GtkWidget *widget, gpointer user_data);
void on_community_create_invite_clicked(GtkWidget *widget, gpointer user_data);
void on_community_accept_invite_clicked(GtkWidget *widget, gpointer user_data);
void on_community_manage_invites_clicked(GtkWidget *widget, gpointer user_data);
void on_community_moderation_clicked(GtkWidget *widget, gpointer user_data);
void on_community_style_clicked(GtkWidget *widget, gpointer user_data);
void on_community_pin_post_clicked(GtkWidget *widget, gpointer user_data);
void on_theme_changed(GtkComboBox *combo, gpointer user_data);
void on_compact_mode_toggled(GtkSwitch *switch_widget, gboolean state, gpointer user_data);
void on_notifications_enabled_toggled(GtkSwitch *switch_widget, gboolean state, gpointer user_data);
void on_clear_cache_clicked(GtkWidget *widget, gpointer user_data);
void on_clear_history_clicked(GtkWidget *widget, gpointer user_data);
void on_change_password_clicked(GtkWidget *widget, gpointer user_data);
void on_change_username_clicked(GtkWidget *widget, gpointer user_data);
void on_account_private_toggled(GtkSwitch *switch_widget, gboolean state, gpointer user_data);
void on_transparency_location_toggled(GtkSwitch *switch_widget, gboolean state, gpointer user_data);
void on_update_community_tag_clicked(GtkWidget *widget, gpointer user_data);
void on_clear_community_tag_clicked(GtkWidget *widget, gpointer user_data);
void on_update_outlines_clicked(GtkWidget *widget, gpointer user_data);
void on_delete_account_clicked(GtkWidget *widget, gpointer user_data);
void on_bulk_delete_posts_clicked(GtkWidget *widget, gpointer user_data);
void on_remove_affiliate_clicked(GtkWidget *widget, gpointer user_data);
void on_create_shop_product_clicked(GtkWidget *widget, gpointer user_data);
void on_clear_for_you_interests_clicked(GtkWidget *widget, gpointer user_data);
void on_add_muted_word_clicked(GtkWidget *widget, gpointer user_data);
void on_invite_delegate_clicked(GtkWidget *widget, gpointer user_data);
void on_schedule_post_clicked(GtkWidget *widget, gpointer user_data);
void on_explore_clicked(GtkWidget *widget, gpointer user_data);
void on_explore_category_changed(GtkComboBox *combo, gpointer user_data);
void on_articles_clicked(GtkWidget *widget, gpointer user_data);
void on_compose_article_clicked(GtkWidget *widget, gpointer user_data);
/* P2P Encrypted Messaging actions */
void on_p2p_send_clicked(GtkWidget *widget, gpointer user_data);
void on_p2p_setup_clicked(GtkWidget *widget, gpointer user_data);
void on_p2p_contact_row_selected(GtkListBox *box, GtkListBoxRow *row, gpointer user_data);
void on_p2p_import_contact_clicked(GtkWidget *widget, gpointer user_data);
void on_p2p_add_contact_clicked(GtkWidget *widget, gpointer user_data);
void on_p2p_transport_changed(GtkComboBox *combo, gpointer user_data);
gboolean on_p2p_contact_clicked(GtkWidget *widget, GdkEventButton *event, gpointer user_data);