src/api.zig


pub extern fn on_search_activated(entry: [*c]c.GtkEntry, user_data: c.gpointer) void;
pub extern fn on_back_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_notifications_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_messages_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_settings_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_admin_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_admin_dm_conversation_selected(box: [*c]c.GtkListBox, row: [*c]c.GtkListBoxRow, user_data: c.gpointer) void;
pub extern fn on_admin_upload_emoji_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_admin_create_badge_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_admin_send_notification_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_admin_clone_user_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_admin_impersonate_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_admin_restore_admin_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_admin_post_as_user_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_admin_bulk_edit_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_admin_create_community_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_mark_all_read_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_refresh_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_compose_clicked(widget: [*c]c.GtkWidget, window: c.gpointer) void;
pub extern fn on_login_clicked(widget: [*c]c.GtkWidget, window: c.gpointer) void;
pub extern fn on_scroll_edge_reached(scrolled_window: [*c]c.GtkScrolledWindow, pos: c.GtkPositionType, user_data: c.gpointer) void;
pub extern fn on_report_profile_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_request_affiliate_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_profile_shop_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_profile_donate_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_profile_algorithm_stats_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_profile_spam_score_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_profile_analytics_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_profile_common_followers_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_profile_top_posts_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_profile_communities_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_manage_passkeys_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_push_notifications_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_moderation_history_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_blocking_causes_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_validate_accounts_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_add_account_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_switch_primary_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_theme_changed(combo: [*c]c.GtkComboBox, user_data: c.gpointer) void;
pub extern fn on_compact_mode_toggled(switch_widget: [*c]c.GtkSwitch, state: c.gboolean, user_data: c.gpointer) void;
pub extern fn on_notifications_enabled_toggled(switch_widget: [*c]c.GtkSwitch, state: c.gboolean, user_data: c.gpointer) void;
pub extern fn on_clear_cache_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_clear_history_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_change_password_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_change_username_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_account_private_toggled(switch_widget: [*c]c.GtkSwitch, state: c.gboolean, user_data: c.gpointer) void;
pub extern fn on_transparency_location_toggled(switch_widget: [*c]c.GtkSwitch, state: c.gboolean, user_data: c.gpointer) void;
pub extern fn on_update_community_tag_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_clear_community_tag_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_update_outlines_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_delete_account_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_bulk_delete_posts_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_remove_affiliate_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_create_shop_product_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_clear_for_you_interests_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_add_muted_word_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_invite_delegate_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_schedule_post_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_explore_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_explore_category_changed(combo: [*c]c.GtkComboBox, user_data: c.gpointer) void;
pub extern fn on_articles_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_compose_article_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_lists_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_create_list_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_list_follow_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_list_edit_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_list_delete_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_list_add_member_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_community_create_invite_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_community_accept_invite_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_community_manage_invites_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_community_moderation_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_community_style_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_community_pin_post_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_p2p_send_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_p2p_setup_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_p2p_contact_row_selected(box: [*c]c.GtkListBox, row: [*c]c.GtkListBoxRow, user_data: c.gpointer) void;
pub extern fn on_p2p_import_contact_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_p2p_add_contact_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_p2p_transport_changed(combo: [*c]c.GtkComboBox, user_data: c.gpointer) void;
pub extern fn on_p2p_contact_clicked(widget: [*c]c.GtkWidget, event: c.gpointer, user_data: c.gpointer) c.gboolean;
pub extern fn on_dm_send_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_attach_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_clear_context_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_leave_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_entry_changed(editable: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_add_people_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_title_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_disappearing_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_request_payment_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_invite_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_join_invite_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_permissions_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_roles_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_dm_pinned_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_follow_button_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
pub extern fn on_edit_profile_clicked(widget: [*c]c.GtkWidget, user_data: c.gpointer) void;
